# venice-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: publish.yml  test.yml
src/venice/: audio_player.py  audio_post.py  auth.py  billing.py  cli.py  client.py  config.py  image_montage.py  mcp_server.py  userconfig.py
src/venice/commands/: __init__.py  _agent.py  _audio.py  _browser.py  _code.py  _compact.py  _exec.py  _index.py  _mailbox.py  _mcp.py  _mcp_client.py  _memory.py  _models.py  _openai.py  _persona.py  _queue.py  _repl.py  _session.py  _shared.py  _steer.py  balance.py  bg_remove.py  chat.py  code.py  completion.py  config.py  contact_sheet.py  embed.py  image.py  image_edit.py  index.py  login.py  master.py  mcp_serve.py  memory.py  models.py  music.py  search.py  secret.py  sessions.py  (+4 more)
tests/: _mcp_fake_server.py  test_agent.py  test_auth.py  test_balance.py  test_bg_remove.py  test_browser.py  test_chat.py  test_client.py  test_code.py  test_code_command.py  test_compact.py  test_completion.py  test_config.py  test_contact_sheet.py  test_embed.py  test_exec.py  test_image.py  test_image_edit.py  test_index.py  test_login.py  test_mailbox.py  test_master.py  test_mcp_client.py  test_mcp_serve.py  test_mcp_tools.py  test_memory.py  test_models.py  test_music.py  test_persona.py  test_planner.py  test_profiles.py  test_repl.py  test_search.py  test_secret.py  test_sessions.py  test_sfx.py  test_shared.py  test_shared_openai.py  test_spawn.py  test_steer.py  (+4 more)
